# hsrv

./: .gitignore  CHANGELOG.md  README.md  hsrv.cabal
app/: Main.hs
src/: Lib.hs
src/Core/: Config.hs  Environment.hs  Logging.hs
src/Data/: DB.hs
src/Server/: Routing.hs
