cabal-version:      2.4
name:               hsrv
version:            0.1.0.0

synopsis: hsrv
-- description:
-- bug-reports:
-- license:
author:             Eduard Stromenko
maintainer:         estromenko@mail.ru
-- copyright:
category: WEB
extra-source-files: CHANGELOG.md

common common
  build-depends:
      base ^>=4.14.3.0, 
  default-language: Haskell2010
  ghc-options: -Wall

library
    import: common
    build-depends: aeson <= 2.0,
                   bytestring <= 0.11.3.0,
                   co-log <= 0.4.0.1,
                   dotenv <= 0.9.0.2,
                   datetime <= 0.3.1,
                   mr-env <= 0.1.0.4,
                   text >= 1.2.2.1,
                   time <= 1.13,
                   scotty >= 0.12,
                   postgresql-simple <= 0.6.4,
                   resource-pool <= 0.2.3.2,
                   warp <= 3.3.20
    exposed-modules: Lib
    other-modules: Core.Config, 
                   Core.Environment,
                   Core.Logging,
                   Data.DB,
                   Server.Routing
    hs-source-dirs: src

executable hsrv
    import:           common
    main-is:          Main.hs
    build-depends:    hsrv
    hs-source-dirs:   app
    default-language: Haskell2010
